--- a/style.css
+++ b/style.css
@@ -2,6 +2,7 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    min-height: 100vh;
  }
 
  body {
@@ -23,28 +24,34 @@
     font-size: 50px;
     margin-top: 20px;
     margin-bottom: 0;
+    text-align: center;
  }
 
  h3 {
     font-size: 20px;
     font-weight: 325;
     margin: 0;
+    text-align: center;
  }
 
  .main {
     display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    margin-top: 25px;
+    gap: 100px;
  }
 
  .art {
+    max-width: 500px;
     display: flex;
-    flex-flow: column;
+    flex-flow: column wrap;
  }
 
  .art-title {
     margin-top: -15px;
     margin-bottom: 20px;
     font-size: 15px;
-    max-width: 500px;
  }
 
  .work-title {
@@ -74,8 +81,11 @@
 .sketch-container {
     display: flex;
     flex: 1 1 0;
+    width: 500px;
+    height: 500px;
  }
 
  .footer {
+    margin-top: auto;
     text-align: center;
  }
