--- a/style.css
+++ b/style.css
@@ -1,7 +1,6 @@
  html, body {
     margin: 0;
     padding: 0;
-    box-sizing: border-box;
     min-height: 100vh;
  }
 
@@ -18,6 +17,7 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    margin-bottom: 20px;
  }
 
  h1 {
@@ -35,10 +35,10 @@
  }
 
  .main {
+    width: 100%;
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
-    margin-top: 25px;
     gap: 100px;
  }
 
@@ -48,8 +48,12 @@
     flex-flow: column wrap;
  }
 
+ .title {
+    height: 40px;
+ }
+
  .art-title {
-    margin-top: -15px;
+    margin-top: auto;
     margin-bottom: 20px;
     font-size: 15px;
  }
@@ -61,11 +65,25 @@
  .art-container {
     display: flex;
     flex: 1 1 0;
+    margin-bottom: 20px;
  }
 
  .art-container img {
     max-width: 500px;
     max-height: 500px;
+ }
+
+ .options {
+    height: 30px;
+ }
+
+ .refresh {
+    font-family: Helvetica, Arial, sans-serif;
+    font-size: 20px;
+    background-color: rgba(210, 180, 140, 0.58);
+    padding: 3px 5px;
+    border-radius: 5px;
+    border-style: solid;
  }
 
  .sketch {
@@ -80,7 +98,12 @@
 
 .sketch-container {
     display: flex;
+    align-items: flex-end;
     flex: 1 1 0;
+    margin-bottom: 20px;
+ }
+
+ .sketch-field {
     width: 500px;
     height: 500px;
  }
