--- a/style.css
+++ b/style.css
@@ -106,6 +106,14 @@
  .sketch-field {
     width: 500px;
     height: 500px;
+    display: grid;
+    grid-template-columns: repeat(16, 1fr);
+    grid-template-rows: repeat(16, 1fr);
+ }
+
+ .cell {
+    border: solid;
+    border-color: red;
  }
 
  .footer {
