--- a/style.css
+++ b/style.css
@@ -92,6 +92,8 @@
  }
 
 .sketch-title {
+    margin-top: auto;
+    margin-bottom: 20px;
     font-size: 20px;
     font-weight: 400;
 }
@@ -107,8 +109,6 @@
     width: 500px;
     height: 500px;
     display: grid;
-    grid-template-columns: repeat(16, 1fr);
-    grid-template-rows: repeat(16, 1fr);
  }
 
  .cell {
