--- a/style.css
+++ b/style.css
@@ -1,138 +1,156 @@
- html, body {
-    margin: 0;
-    padding: 0;
-    min-height: 100vh;
- }
+html, body {
+   margin: 0;
+   padding: 0;
+   min-height: 100vh;
+}
 
- body {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    gap: 20px;
-    font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
- }
+body {
+   display: flex;
+   flex-direction: column;
+   align-items: center;
+   gap: 20px;
+   font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
+}
 
- .header {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    margin-bottom: 20px;
- }
+.header {
+   display: flex;
+   flex-direction: column;
+   justify-content: center;
+   align-items: center;
+   margin-bottom: 20px;
+}
 
- h1 {
-    font-size: 50px;
-    margin-top: 20px;
-    margin-bottom: 0;
-    text-align: center;
- }
+h1 {
+   font-size: 50px;
+   margin-top: 20px;
+   margin-bottom: 0;
+   text-align: center;
+}
 
- h3 {
-    font-size: 20px;
-    font-weight: 325;
-    margin: 0;
-    text-align: center;
- }
+h3 {
+   font-size: 20px;
+   font-weight: 325;
+   margin: 0;
+   text-align: center;
+}
 
- .main {
-    width: 100%;
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
-    gap: 100px;
- }
+.main {
+   width: 100%;
+   display: flex;
+   flex-wrap: wrap;
+   justify-content: center;
+}
 
- .art {
-    max-width: 500px;
-    display: flex;
-    flex-flow: column wrap;
- }
+.art {
+   max-width: 500px;
+   margin: 0 50px;
+   display: flex;
+   flex-flow: column wrap;
+}
 
- .title {
-    height: 40px;
- }
+.title {
+   height: 40px;
+}
 
- .art-title {
-    margin-top: auto;
-    margin-bottom: 20px;
-    font-size: 15px;
- }
+.art-title {
+   margin-top: auto;
+   margin-bottom: 20px;
+   font-size: 15px;
+}
 
- .work-title {
-    font-style: italic;
- }
+.work-title {
+   font-style: italic;
+}
 
- .art-container {
-    display: flex;
-    flex: 1 1 0;
-    margin-bottom: 20px;
- }
+.art-container {
+   display: flex;
+   flex: 1 1 0;
+   margin-bottom: 20px;
+}
 
- .art-container img {
-    max-width: 500px;
-    max-height: 500px;
- }
+.art-container img {
+   max-width: 500px;
+   max-height: 500px;
+}
 
- .options {
-    height: 30px;
- }
+.options {
+   height: 100px;
+}
 
- .refresh {
-    font-family: Helvetica, Arial, sans-serif;
-    font-size: 20px;
-    background-color: rgba(210, 180, 140, 0.58);
-    padding: 3px 5px;
-    border-radius: 5px;
-    border-style: solid;
- }
+.art-options {
+   display: flex;
+   flex-flow: column;
+   align-items: center;
+}
 
- .sketch {
-    display: flex;
-    flex-direction: column;
- }
+button {
+   font-family: Helvetica, Arial, sans-serif;
+   background-color: rgba(210, 180, 140, 0.58);
+   border-radius: 5px;
+   border-style: solid;
+}
+
+button:active {
+   background-color: rgba(126, 108, 84, 0.58);
+}
+
+.refresh {
+   font-size: 20px;
+   padding: 3px 5px;
+}
+
+.sketch {
+   margin: 0 50px;
+   display: flex;
+   flex-direction: column;
+}
 
 .sketch-title {
-    margin-top: auto;
-    margin-bottom: 20px;
-    font-size: 25px;
-    font-weight: 400;
+   margin-top: auto;
+   margin-bottom: 20px;
+   font-size: 25px;
+   font-weight: 400;
 }
 
 .sketch-container {
-    display: flex;
-    align-items: flex-end;
-    flex: 1 1 0;
-    margin-bottom: 20px;
- }
+   display: flex;
+   align-items: flex-end;
+   flex: 1 1 0;
+   margin-bottom: 20px;
+}
 
- .sketch-field {
-    width: 500px;
-    height: 500px;
-    display: grid;
-    border-color: black;
-    border-style: solid;
- }
+.sketch-field {
+   width: 500px;
+   height: 500px;
+   display: grid;
+   border-color: black;
+   border-style: solid;
+}
 
 .sketch-options {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
+   display: flex;
+   flex-flow: column;
+   justify-content: space-between;
+   align-items: center;
+}
+
+.option-text {
+   font-size: 20px;
 }
 
 #color {
-    font-size: 20px;
-    margin-right: 5px;
+   margin-right: 5px;
 }
 
-#pixel {
-    font-size: 20px;
+.pixel-type {
+   font-size: 15px;
 }
 
- .cell {
+.rounded-cell {
    border-radius: 50%;
- }
+}
 
- .footer {
-    margin-top: auto;
-    text-align: center;
- }
+.footer {
+   margin-top: auto;
+   text-align: center;
+}
