--- a/style.css
+++ b/style.css
@@ -49,7 +49,7 @@ h3 {
 }
 
 .title {
-   height: 40px;
+   height: 35px;
 }
 
 .art-title {
@@ -94,7 +94,7 @@ button:active {
    background-color: rgba(126, 108, 84, 0.58);
 }
 
-.refresh {
+.new-masterpiece {
    font-size: 20px;
    padding: 3px 5px;
 }
@@ -152,5 +152,6 @@ button:active {
 
 .footer {
    margin-top: auto;
+   padding-top: 30px;
    text-align: center;
 }
